--- a/analizador-xgot/src/main/resources/tfcc/perfil-view.fxml
+++ b/analizador-xgot/src/main/resources/tfcc/perfil-view.fxml
@@ -7,10 +7,9 @@
 
 <BorderPane xmlns="http://javafx.com/javafx/23.0.1"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="es.uem.tfcc.PerfilController"
+            fx:controller="com.shotvalue.front.PerfilController"
             prefWidth="1200.0" prefHeight="750.0">
 
-    <!-- Menú lateral -->
     <left>
         <VBox spacing="20" alignment="TOP_CENTER" prefWidth="180.0"
               style="-fx-background-color: #2A3F3F;" BorderPane.alignment="CENTER">
@@ -31,16 +30,12 @@
         </VBox>
     </left>
 
-    <!-- Contenido del perfil -->
     <center>
         <VBox spacing="30" alignment="TOP_CENTER" style="-fx-background-color: #F9FDFC; -fx-padding: 40;">
 
-            <!-- Título -->
             <Label text="Mi Perfil" style="-fx-font-size: 26px; -fx-font-weight: bold;"/>
 
-            <!-- Avatar y datos personales -->
             <HBox spacing="60" alignment="CENTER">
-                <!-- Avatar ampliado -->
                 <VBox spacing="15" alignment="CENTER">
                     <ImageView fx:id="avatarImage" fitWidth="180" fitHeight="180" preserveRatio="true"
                                style="-fx-effect: dropshadow(gaussian, black, 5, 0, 0, 0);">
@@ -52,7 +47,6 @@
                             style="-fx-background-color: #0F7F7F; -fx-text-fill: white;"/>
                 </VBox>
 
-                <!-- Datos personales ampliados -->
                 <GridPane hgap="30" vgap="20" alignment="CENTER">
                     <children>
                         <Label text="Nombre completo:" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
@@ -74,7 +68,6 @@
                 </GridPane>
             </HBox>
 
-            <!-- Cambiar contraseña -->
             <VBox spacing="12" maxWidth="600" alignment="CENTER">
                 <Label text="Cambiar contraseña" style="-fx-font-weight: bold;"/>
                 <PasswordField fx:id="currentPasswordField" promptText="Contraseña actual"/>
@@ -82,7 +75,6 @@
                 <PasswordField fx:id="confirmPasswordField" promptText="Confirmar nueva contraseña"/>
             </VBox>
 
-            <!-- Botones de acción -->
             <HBox spacing="20" alignment="CENTER">
                 <Button text="Guardar Cambios" fx:id="saveBtn" style="-fx-background-color: #27AE60; -fx-text-fill: white;"/>
                 <Button text="Cerrar Sesión" fx:id="logoutBtn" style="-fx-background-color: #F39C12; -fx-text-fill: white;"/>
