--- a/analizador-xgot/src/main/resources/tfcc/login.fxml
+++ b/analizador-xgot/src/main/resources/tfcc/login.fxml
@@ -11,7 +11,7 @@
             prefHeight="450.0" prefWidth="600.0"
             style="-fx-background-color: linear-gradient(to bottom, #0f2027, #203a43, #2c5364);"
             xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="es.uem.tfcc.LoginController">
+            fx:controller="com.shotvalue.front.LoginController">
 
    <children>
       <VBox alignment="CENTER" spacing="12.0" prefHeight="450.0" prefWidth="600.0"
@@ -19,7 +19,6 @@
                    -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.25), 10, 0.5, 0, 0);">
 
          <children>
-            <!-- Logo -->
             <ImageView fx:id="logoImage" fitWidth="150" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../img/logo.png" />
@@ -29,7 +28,6 @@
 
             <Separator prefWidth="200" />
 
-            <!-- Título y formulario -->
             <Label style="-fx-font-size: 20px; -fx-font-weight: bold;" text="Iniciar Sesión" />
             <Label text="Usuario:" />
             <TextField fx:id="usernameField" promptText="Introduce tu usuario..." />
