--- a/analizador-xgot/src/main/resources/tfcc/registro.fxml
+++ b/analizador-xgot/src/main/resources/tfcc/registro.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx/23.0.1"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="es.uem.tfcc.RegistroController"
+            fx:controller="com.shotvalue.front.RegistroController"
             prefHeight="500.0" prefWidth="600.0"
             style="-fx-background-color: linear-gradient(to bottom, #0f2027, #203a43, #2c5364);">
 
@@ -19,7 +19,6 @@
                    -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.25), 10, 0.5, 0, 0);">
 
             <children>
-                <!-- Logo -->
                 <ImageView fitWidth="150" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="@../../../img/logo.png" />
@@ -28,7 +27,6 @@
 
                 <Separator prefWidth="200"/>
 
-                <!-- Registro -->
                 <Label style="-fx-font-size: 20px; -fx-font-weight: bold;" text="Crear Cuenta" />
                 <Label text="Usuario:" />
                 <TextField fx:id="usernameField" promptText="Introduce tu nombre de usuario" />
