--- a/analizador-xgot/src/main/resources/tfcc/equipos-view.fxml
+++ b/analizador-xgot/src/main/resources/tfcc/equipos-view.fxml
@@ -8,7 +8,7 @@
 
 
 <BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.shotvalue.front.EquiposController"
+            fx:controller="com.shotvalue.analizador_xgot.front.EquiposController"
             prefWidth="1000.0" prefHeight="700.0">
 
     <left>
