--- a/analizador-xgot/src/main/resources/tfcc/login.fxml
+++ b/analizador-xgot/src/main/resources/tfcc/login.fxml
@@ -11,7 +11,7 @@
             prefHeight="450.0" prefWidth="600.0"
             style="-fx-background-color: linear-gradient(to bottom, #0f2027, #203a43, #2c5364);"
             xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.shotvalue.front.LoginController">
+            fx:controller="com.shotvalue.analizador_xgot.front.LoginController">
 
    <children>
       <VBox alignment="CENTER" spacing="12.0" prefHeight="450.0" prefWidth="600.0"
