--- a/analizador-xgot/src/main/resources/tfcc/perfil-view.fxml
+++ b/analizador-xgot/src/main/resources/tfcc/perfil-view.fxml
@@ -7,7 +7,7 @@
 
 <BorderPane xmlns="http://javafx.com/javafx/23.0.1"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.shotvalue.front.PerfilController"
+            fx:controller="com.shotvalue.analizador_xgot.front.PerfilController"
             prefWidth="1200.0" prefHeight="750.0">
 
     <left>
