--- a/analizador-xgot/src/main/resources/tfcc/registro-view.fxml
+++ b/analizador-xgot/src/main/resources/tfcc/registro-view.fxml
@@ -8,7 +8,7 @@
 
 <BorderPane xmlns="http://javafx.com/javafx/23.0.1"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.shotvalue.front.RegistroController"
+            fx:controller="com.shotvalue.analizador_xgot.front.RegistroController"
             prefWidth="1200.0" prefHeight="750.0">
 
     <left>
