--- a/analizador-xgot/src/main/resources/tfcc/registro.fxml
+++ b/analizador-xgot/src/main/resources/tfcc/registro.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx/23.0.1"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.shotvalue.front.RegistroController"
+            fx:controller="com.shotvalue.analizador_xgot.front.RegistroController"
             prefHeight="500.0" prefWidth="600.0"
             style="-fx-background-color: linear-gradient(to bottom, #0f2027, #203a43, #2c5364);">
 
