Primera relacion entre vistas

--- a/analizador-xgot/src/main/resources/tfcc/equipos-view.fxml
+++ b/analizador-xgot/src/main/resources/tfcc/equipos-view.fxml
@@ -18,7 +18,7 @@
 
                 <ImageView fx:id="logoImage" fitWidth="150" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@../../../img/logo.png" />
+                        <Image url="@../img/logo.png" />
                     </image>
                 </ImageView>
 
