--- a/analizador-xgot/src/main/resources/tfcc/perfil-view.fxml
+++ b/analizador-xgot/src/main/resources/tfcc/perfil-view.fxml
@@ -16,7 +16,7 @@
             <children>
                 <ImageView fitWidth="150" preserveRatio="true">
                     <image>
-                        <Image url="@../../../img/logo.png" />
+                        <Image url="@../img/logo.png" />
                     </image>
                 </ImageView>
                 <Button text="Inicio" prefWidth="160" style="-fx-background-color: transparent; -fx-text-fill: white;" />
@@ -40,7 +40,7 @@
                     <ImageView fx:id="avatarImage" fitWidth="180" fitHeight="180" preserveRatio="true"
                                style="-fx-effect: dropshadow(gaussian, black, 5, 0, 0, 0);">
                         <image>
-                            <Image url="@../../../img/avatar_placeholder.png"/>
+                            <Image url="@../img/avatar_placeholder.png"/>
                         </image>
                     </ImageView>
                     <Button text="Cambiar Imagen" fx:id="changeImageBtn"
