--- a/analizador-xgot/src/main/resources/tfcc/registro.fxml
+++ b/analizador-xgot/src/main/resources/tfcc/registro.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.layout.StackPane?>
 <AnchorPane xmlns="http://javafx.com/javafx/23.0.1"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="com.shotvalue.front.RegistroController"
@@ -14,9 +15,12 @@
             style="-fx-background-color: linear-gradient(to bottom, #0f2027, #203a43, #2c5364);">
 
     <children>
-        <VBox alignment="CENTER" spacing="12.0" prefWidth="500.0" prefHeight="500.0"
+        <StackPane AnchorPane.topAnchor="0" AnchorPane.bottomAnchor="0"
+                   AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0">
+
+        <VBox alignment="CENTER" spacing="12.0" prefHeight="450.0" prefWidth="600.0"
               style="-fx-background-color: white; -fx-background-radius: 10; -fx-padding: 30;
-                   -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.25), 10, 0.5, 0, 0);">
+                     -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.25), 10, 0.5, 0, 0);">
 
             <children>
                 <ImageView fitWidth="150" pickOnBounds="true" preserveRatio="true">
@@ -44,5 +48,6 @@
                 <Insets bottom="30.0" left="40.0" right="40.0" top="30.0" />
             </padding>
         </VBox>
+        </StackPane>
     </children>
 </AnchorPane>
