--- a/analizador-xgot/src/main/resources/tfcc/equipos-view.fxml
+++ b/analizador-xgot/src/main/resources/tfcc/equipos-view.fxml
@@ -2,34 +2,38 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 
-
-<BorderPane xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
+<BorderPane xmlns="http://javafx.com/javafx/21.0.7"
+            xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.shotvalue.front.EquiposController"
+            fx:id="mainBorderPane"
             prefWidth="1000.0" prefHeight="700.0">
 
     <left>
-        <VBox style="-fx-background-color: #2A3F3F;" spacing="20" alignment="TOP_CENTER" prefWidth="180.0"
-              BorderPane.alignment="CENTER">
+        <VBox style="-fx-background-color: #2A3F3F;" spacing="20" alignment="TOP_CENTER" prefWidth="180.0">
             <children>
-
                 <ImageView fx:id="logoImage" fitWidth="150" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="@../img/logo.png" />
                     </image>
                 </ImageView>
 
-                <Button text="Inicio" prefWidth="160" style="-fx-background-color: transparent; -fx-text-fill: white;" />
-                <Button text="Equipos y Competiciones" prefWidth="160"
-                        style="-fx-background-color: #0F7F7F; -fx-text-fill: white; -fx-font-weight: bold;" />
-                <Button text="Registrar" prefWidth="160" style="-fx-background-color: transparent; -fx-text-fill: white;" />
-                <Button text="Visualizar" prefWidth="160" style="-fx-background-color: transparent; -fx-text-fill: white;" />
-                <Button text="Informes" prefWidth="160" style="-fx-background-color: transparent; -fx-text-fill: white;" />
-                <Button text="Perfil" prefWidth="160" style="-fx-background-color: transparent; -fx-text-fill: white;" />
-                <Button text="Ayuda" prefWidth="160" style="-fx-background-color: transparent; -fx-text-fill: white;" />
+                <Button fx:id="btnInicio" text="Inicio" prefWidth="160"
+                        style="-fx-background-color: transparent; -fx-text-fill: white;" />
+                <Button fx:id="btnEquipos" text="Equipos y Competiciones" prefWidth="160"
+                        style="-fx-background-color: transparent; -fx-text-fill: white;" />
+                <Button fx:id="btnRegistrar" text="Registrar" prefWidth="160"
+                        style="-fx-background-color: transparent; -fx-text-fill: white;" />
+                <Button fx:id="btnVisualizar" text="Visualizar" prefWidth="160"
+                        style="-fx-background-color: transparent; -fx-text-fill: white;" />
+                <Button fx:id="btnInformes" text="Informes" prefWidth="160"
+                        style="-fx-background-color: transparent; -fx-text-fill: white;" />
+                <Button fx:id="btnPerfil" text="Perfil" prefWidth="160"
+                        style="-fx-background-color: transparent; -fx-text-fill: white;" />
+                <Button fx:id="btnAyuda" text="Ayuda" prefWidth="160"
+                        style="-fx-background-color: transparent; -fx-text-fill: white;" />
             </children>
         </VBox>
     </left>
@@ -37,7 +41,6 @@
     <center>
         <VBox spacing="20" style="-fx-background-color: #2E2E2E; -fx-padding: 20;">
             <children>
-
                 <HBox spacing="15">
                     <children>
                         <VBox spacing="10">
@@ -74,7 +77,7 @@
                         <ComboBox fx:id="generalPositionBox" promptText="Posición general" prefWidth="140"/>
                         <ComboBox fx:id="specificPositionBox" promptText="Posición específica" prefWidth="140"/>
                         <Button text="Añadir jugador" onAction="#handleAddPlayer"
-                                style="-fx-background-color: #16A085; -fx-text-fill: white;"/>
+                                style="-fx-background-color: #16A085; -fx-text-fill: white;" />
                     </children>
                 </HBox>
 
@@ -89,13 +92,14 @@
 
                 <HBox spacing="15" alignment="CENTER">
                     <children>
-                        <Button text="Cargar" style="-fx-background-color: #1ABC9C; -fx-text-fill: white;"/>
-                        <Button text="Descargar" style="-fx-background-color: #27AE60; -fx-text-fill: white;"/>
-                        <Button text="Eliminar" style="-fx-background-color: #E74C3C; -fx-text-fill: white;"/>
-                        <Button text="Modificar" style="-fx-background-color: #F39C12; -fx-text-fill: white;"/>
+                        <Button text="Cargar" style="-fx-background-color: #1ABC9C; -fx-text-fill: white;" />
+                        <Button text="Descargar" style="-fx-background-color: #27AE60; -fx-text-fill: white;" />
+                        <Button text="Eliminar" style="-fx-background-color: #E74C3C; -fx-text-fill: white;" />
+                        <Button text="Modificar" style="-fx-background-color: #F39C12; -fx-text-fill: white;" />
                     </children>
                 </HBox>
             </children>
         </VBox>
     </center>
+
 </BorderPane>
