--- a/analizador-xgot/src/main/resources/tfcc/equipos-view.fxml
+++ b/analizador-xgot/src/main/resources/tfcc/equipos-view.fxml
@@ -1,61 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.control.*?>
 
-<VBox xmlns="http://javafx.com/javafx"
-      xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.shotvalue.front.EquiposController"
-      spacing="20"
-      style="-fx-background-color: #2E2E2E; -fx-padding: 20;">
-    <children>
-        <HBox spacing="15">
+<BorderPane xmlns="http://javafx.com/javafx/21.0.7"
+            xmlns:fx="http://javafx.com/fxml"
+            fx:controller="com.shotvalue.analizador_xgot.front.EquiposController"
+            fx:id="mainBorderPane"
+            style="-fx-background-color: #2E2E2E;">
+
+    <left>
+        <VBox spacing="10"
+              prefWidth="200"
+              style="-fx-background-color: #1ABC9C; -fx-padding: 20;">
             <children>
-                <VBox spacing="10">
-                    <children>
-                        <Label text="Nombre equipo" textFill="white"/>
-                        <TextField fx:id="teamNameField" promptText="Deportivo Alavés" />
-                    </children>
-                </VBox>
-                <VBox spacing="10">
-                    <children>
-                        <Label text="Entrenador" textFill="white"/>
-                        <TextField fx:id="coachField" promptText="Luis García" />
-                    </children>
-                </VBox>
-                <VBox spacing="10">
-                    <children>
-                        <Label text="Formación" textFill="white"/>
-                        <ComboBox fx:id="formationBox" prefWidth="120"/>
-                    </children>
-                </VBox>
-                <VBox spacing="10">
-                    <children>
-                        <Label text="Color" textFill="white"/>
-                        <ColorPicker fx:id="colorPicker" />
-                    </children>
-                </VBox>
+                <Button fx:id="btnInicio" text="Inicio" maxWidth="Infinity"/>
+                <Button fx:id="btnEquipos" text="Equipos" maxWidth="Infinity"/>
+                <Button fx:id="btnRegistrar" text="Registrar" maxWidth="Infinity"/>
+                <Button fx:id="btnVisualizar" text="Visualizar" maxWidth="Infinity"/>
+                <Button fx:id="btnInformes" text="Informes" maxWidth="Infinity"/>
+                <Button fx:id="btnPerfil" text="Perfil" maxWidth="Infinity"/>
+                <Button fx:id="btnAyuda" text="Ayuda" maxWidth="Infinity"/>
             </children>
-        </HBox>
+        </VBox>
+    </left>
 
-        <HBox spacing="10">
-            <children>
-                <TextField fx:id="numberField" promptText="Número" prefWidth="80"/>
-                <TextField fx:id="playerNameField" promptText="Nombre jugador" />
-                <ComboBox fx:id="generalPositionBox" promptText="Posición general" prefWidth="140"/>
-                <ComboBox fx:id="specificPositionBox" promptText="Posición específica" prefWidth="140"/>
-                <Button text="Añadir jugador" onAction="#handleAddPlayer"
-                        style="-fx-background-color: #16A085; -fx-text-fill: white;" />
-            </children>
-        </HBox>
+    <center>
+        <AnchorPane fx:id="contenidoCentro" />
+    </center>
 
-        <TableView fx:id="playerTable" prefHeight="300">
-            <columns>
-                <TableColumn text="Número" prefWidth="80"/>
-                <TableColumn text="Nombre" prefWidth="160"/>
-                <TableColumn text="Posición general" prefWidth="160"/>
-                <TableColumn text="Posición específica" prefWidth="160"/>
-            </columns>
-        </TableView>
-    </children>
-</VBox>
+</BorderPane>
