--- a/analizador-xgot/src/main/resources/tfcc/ayuda-view.fxml
+++ b/analizador-xgot/src/main/resources/tfcc/ayuda-view.fxml
@@ -1,14 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
+<BorderPane xmlns="http://javafx.com/javafx/21.0.7"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.shotvalue.analizador_xgot.front.AyudaController"
+            styleClass="content-pane">
 
-</AnchorPane>
+    <!-- Buscador de FAQ -->
+    <top>
+        <VBox spacing="10" style="-fx-padding: 15; -fx-background-color: #1F1F1F;">
+            <Label text="Preguntas frecuentes" styleClass="label-white"/>
+            <TextField fx:id="faqSearchField"
+                       promptText="Buscar en FAQs..."
+                       onKeyReleased="#filterFaqs"
+                       styleClass="input-field"/>
+        </VBox>
+    </top>
+
+    <!-- Contenido principal dividido en dos columnas -->
+    <center>
+        <GridPane hgap="20" vgap="20" style="-fx-padding: 15;">
+            <columnConstraints>
+                <ColumnConstraints percentWidth="50"/>
+                <ColumnConstraints percentWidth="50"/>
+            </columnConstraints>
+
+            <!-- Lista de FAQs -->
+            <ListView fx:id="faqList"
+                      prefHeight="400"
+                      GridPane.columnIndex="0"/>
+
+            <!-- Formulario de contacto y recursos -->
+            <VBox spacing="15" GridPane.columnIndex="1">
+                <!-- Contacto -->
+                <TitledPane text="Contáctanos" collapsible="false">
+                    <VBox spacing="10" style="-fx-padding: 10;">
+                        <TextField fx:id="nameField" promptText="Tu nombre" styleClass="input-field"/>
+                        <TextField fx:id="emailField" promptText="Tu email" styleClass="input-field"/>
+                        <TextArea fx:id="messageArea" promptText="Describe tu problema..." prefRowCount="4"/>
+                        <Button text="Enviar mensaje" onAction="#handleSend" styleClass="menu-button"/>
+                    </VBox>
+                </TitledPane>
+
+                <!-- Recursos adicionales -->
+                <TitledPane text="Recursos" expanded="false">
+                    <VBox spacing="8" style="-fx-padding: 10;">
+                        <Hyperlink text="Documentación en línea" onAction="#openDocs"/>
+                        <Hyperlink text="Tutoriales en vídeo" onAction="#openVideos"/>
+                        <Hyperlink text="Canal de soporte (Slack)" onAction="#openSlack"/>
+                    </VBox>
+                </TitledPane>
+            </VBox>
+        </GridPane>
+    </center>
+</BorderPane>
