--- a/analizador-xgot/src/main/resources/tfcc/equipos-content.fxml
+++ b/analizador-xgot/src/main/resources/tfcc/equipos-content.fxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
 <VBox xmlns="http://javafx.com/javafx/21.0.7"
-      xmlns:fx="http://javafx.com/fxml"
+      xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.shotvalue.analizador_xgot.front.EquiposContentController"
       spacing="20"
       style="-fx-background-color: #2E2E2E; -fx-padding: 20;">
 
@@ -16,13 +16,13 @@
                 <VBox spacing="10">
                     <children>
                         <Label text="Nombre equipo" textFill="white"/>
-                        <TextField fx:id="teamNameField" promptText="Deportivo Alavés" />
+                        <TextField fx:id="teamNameField" promptText="Deportivo Alavés"/>
                     </children>
                 </VBox>
                 <VBox spacing="10">
                     <children>
                         <Label text="Entrenador" textFill="white"/>
-                        <TextField fx:id="coachField" promptText="Luis García" />
+                        <TextField fx:id="coachField" promptText="Luis García"/>
                     </children>
                 </VBox>
                 <VBox spacing="10">
@@ -34,7 +34,7 @@
                 <VBox spacing="10">
                     <children>
                         <Label text="Color" textFill="white"/>
-                        <ColorPicker fx:id="colorPicker" />
+                        <ColorPicker fx:id="colorPicker"/>
                     </children>
                 </VBox>
             </children>
@@ -44,11 +44,11 @@
         <HBox spacing="10">
             <children>
                 <TextField fx:id="numberField" promptText="Número" prefWidth="80"/>
-                <TextField fx:id="playerNameField" promptText="Nombre jugador" />
+                <TextField fx:id="playerNameField" promptText="Nombre jugador"/>
                 <ComboBox fx:id="generalPositionBox" promptText="Posición general" prefWidth="140"/>
                 <ComboBox fx:id="specificPositionBox" promptText="Posición específica" prefWidth="140"/>
                 <Button text="Añadir jugador" onAction="#handleAddPlayer"
-                        style="-fx-background-color: #16A085; -fx-text-fill: white;" />
+                        style="-fx-background-color: #16A085; -fx-text-fill: white;"/>
             </children>
         </HBox>
 
@@ -65,10 +65,10 @@
         <!-- Botones de acción -->
         <HBox spacing="15" alignment="CENTER">
             <children>
-                <Button text="Cargar" style="-fx-background-color: #1ABC9C; -fx-text-fill: white;" />
-                <Button text="Descargar" style="-fx-background-color: #27AE60; -fx-text-fill: white;" />
-                <Button text="Eliminar" style="-fx-background-color: #E74C3C; -fx-text-fill: white;" />
-                <Button text="Modificar" style="-fx-background-color: #F39C12; -fx-text-fill: white;" />
+                <Button text="Cargar" style="-fx-background-color: #1ABC9C; -fx-text-fill: white;"/>
+                <Button text="Descargar" style="-fx-background-color: #27AE60; -fx-text-fill: white;"/>
+                <Button text="Eliminar" style="-fx-background-color: #E74C3C; -fx-text-fill: white;"/>
+                <Button text="Modificar" style="-fx-background-color: #F39C12; -fx-text-fill: white;"/>
             </children>
         </HBox>
     </children>
