--- a/analizador-xgot/src/main/resources/tfcc/equipos-content.fxml
+++ b/analizador-xgot/src/main/resources/tfcc/equipos-content.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.paint.*?>
 
 <VBox xmlns="http://javafx.com/javafx/21.0.7"
       xmlns:fx="http://javafx.com/fxml/1"
@@ -10,65 +9,41 @@
       style="-fx-background-color: #2E2E2E; -fx-padding: 20;">
 
     <children>
-        <!-- Info del equipo -->
+        <!-- Selección de equipo -->
         <HBox spacing="15">
             <children>
                 <VBox spacing="10">
                     <children>
-                        <Label text="Nombre equipo" textFill="white"/>
-                        <TextField fx:id="teamNameField" promptText="Deportivo Alavés"/>
+                        <Label text="Equipo" textFill="white"/>
+                        <ComboBox fx:id="equipoSelector" prefWidth="200"/>
                     </children>
                 </VBox>
                 <VBox spacing="10">
                     <children>
-                        <Label text="Entrenador" textFill="white"/>
-                        <TextField fx:id="coachField" promptText="Luis García"/>
+                        <Label text="Buscar jugador" textFill="white"/>
+                        <TextField fx:id="jugadorSearchField" promptText="Buscar por nombre o apellido"/>
                     </children>
                 </VBox>
-                <VBox spacing="10">
-                    <children>
-                        <Label text="Formación" textFill="white"/>
-                        <ComboBox fx:id="formationBox" prefWidth="120"/>
-                    </children>
-                </VBox>
-                <VBox spacing="10">
-                    <children>
-                        <Label text="Color" textFill="white"/>
-                        <ColorPicker fx:id="colorPicker"/>
-                    </children>
-                </VBox>
-            </children>
-        </HBox>
-
-        <!-- Añadir jugador -->
-        <HBox spacing="10">
-            <children>
-                <TextField fx:id="numberField" promptText="Número" prefWidth="80"/>
-                <TextField fx:id="playerNameField" promptText="Nombre jugador"/>
-                <ComboBox fx:id="generalPositionBox" promptText="Posición general" prefWidth="140"/>
-                <ComboBox fx:id="specificPositionBox" promptText="Posición específica" prefWidth="140"/>
-                <Button text="Añadir jugador" onAction="#handleAddPlayer"
-                        style="-fx-background-color: #16A085; -fx-text-fill: white;"/>
             </children>
         </HBox>
 
         <!-- Tabla de jugadores -->
-        <TableView fx:id="playerTable" prefHeight="300">
+        <TableView fx:id="playerTable" prefHeight="350">
             <columns>
-                <TableColumn text="Número" prefWidth="80"/>
+                <TableColumn text="Dorsal" prefWidth="80"/>
                 <TableColumn text="Nombre" prefWidth="160"/>
-                <TableColumn text="Posición general" prefWidth="160"/>
-                <TableColumn text="Posición específica" prefWidth="160"/>
+                <TableColumn text="Apellido" prefWidth="160"/>
+                <TableColumn text="Posición" prefWidth="180"/>
             </columns>
         </TableView>
 
         <!-- Botones de acción -->
         <HBox spacing="15" alignment="CENTER">
             <children>
-                <Button text="Cargar" style="-fx-background-color: #1ABC9C; -fx-text-fill: white;"/>
-                <Button text="Descargar" style="-fx-background-color: #27AE60; -fx-text-fill: white;"/>
-                <Button text="Eliminar" style="-fx-background-color: #E74C3C; -fx-text-fill: white;"/>
-                <Button text="Modificar" style="-fx-background-color: #F39C12; -fx-text-fill: white;"/>
+                <Button text="Ver tiros del jugador" style="-fx-background-color: #2980B9; -fx-text-fill: white;"/>
+                <Button text="Guardar cambios" style="-fx-background-color: #27AE60; -fx-text-fill: white;"/>
+                <Button text="Eliminar jugador" style="-fx-background-color: #C0392B; -fx-text-fill: white;"/>
+                <Button text="Modificar jugador" style="-fx-background-color: #F39C12; -fx-text-fill: white;"/>
             </children>
         </HBox>
     </children>
